--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "sys-inspector"]
-	path = sys-inspector
-	url = http://github.com/becketta/sys-inspector.git
+[submodule "inspector"]
+	path = inspector
+	url = https://github.com/becketta/sys-inspector.git
