Added wrappers as a submodule (used for chamview's initial input gui)

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = inspector
 	url = https://github.com/becketta/sys-inspector.git
 
+[submodule "wrappers"]
+	path = wrappers
+	url = https://github.com/becketta/wrappers.git
